argocd/app/homeassistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  ports:
    - port: 8123
      protocol: TCP
      targetPort: cluster
  selector:
    vm.kubevirt.io/name: hass-vm
  type: ClusterIP
