argocd/app/homeassistant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: acme
    dns.homelab.wojoinc.xyz/publish-external: ""
    dns.homelab.wojoinc.xyz/publish-internal: ""
    external-dns.alpha.kubernetes.io/target: wojoinc.xyz.
spec:
  ingressClassName: traefik-external
  rules:
    - host: home.wojoinc.xyz
      http:
        paths:
          - backend:
              service:
                name: hass
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.wojoinc.xyz
      secretName: hass-tls
